# chess

./: CMakeLists.txt
include/: AIFactory.hpp  Board.hpp  NCursesTerm.hpp  Piece.hpp
include/ai/: Player.hpp  Test.hpp
src/: AIFactory.cpp  Board.cpp  NCursesTerm.cpp  Piece.cpp  main.cpp
src/ai/: Player.cpp  Test.cpp
